Remove unnecessary type